# osu_data_csv

./: LICENSE  README.md  ignore_mapping.yaml  main.py  main_gh.py  playground.py  pyproject.toml  requirements.txt
.github/workflows/: custom_retrieval.yml  main.yml  monthly_retrieval.yml  test_package.yml
osu_data_csv/: conf.py  default_mapping.yaml  download.py  ignore_mapping.yaml  main.py  parse_sql.py  pipelines.py  tarbz2.py
src/: conf.py  convert.py  download.py  parse_sql.py  pipelines.py  sql_to_df.py  tarbz2.py
