[tool.poetry]
name = "osu-data-csv"
version = "0.1.5"
description = "Downloads and Converts .sqls from data.ppy.sh into .csv"
authors = ["Eve-ning <dev_evening@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "osu_data_csv"}]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.64.1"
pandas = "^1.5.3"
wget = "^3.2"
click = "^8.1.3"
pyyaml = "^6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osu-data-csv = "osu_data_csv.main:main"